--- a/css/responsive.css
+++ b/css/responsive.css
@@ -429,3 +429,20 @@
 		left: 43%;
 	}
 }
+
+
+.hexagon {
+    width: 480px; /* Ajuste conforme necessário */
+    height: 403px; /* Para manter a proporção de um hexágono regular */
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hexagon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
